@@ -39,11 +39,10 @@ def inventory_perle_chassis(info):
 
 
 def check_perle_chassis(_no_item, _no_params, info):
-    map_diag_states = {
-        "0" : (0, "passed"),
-        "1" : (1, "firmware download required"),
-        "2" : (2, "temperature sensor not functional"),
-    }
+    map_diag_states = { "0" : (0, "passed"),
+                        "1" : (1, "firmware download required"),
+                        "2" : (2, "temperature sensor not functional"), }
+
     model, serial, bootloader, fw, alarms_str, diagstate, temp_str = info[0]
     state, state_readable = map_diag_states[diagstate]
     yield state, "Diagnostic result: %s" % state_readable
