@@ -28,7 +28,7 @@
 check_info['perle_modules_cm1000'] = {
     'inventory_function'    : inventory_perle_cm_modules,
     'check_function'        : check_perle_cm_modules,
-    'service_description'   : 'CM1000 module %s',
+    'service_description'   : 'Chassis slot %s CM1000',
     'snmp_info'             : ('.1.3.6.1.4.1.1966.21.1.1.1.1.4.1', [
                                     "1.1.3",    # PERLE-MCR-MGT-MIB::cm1000Modelname
                                     "3.1.3",    # PERLE-MCR-MGT-MIB::cm1000LedPWR
