@@ -28,7 +28,7 @@
 check_info['perle_modules_cm1110'] = {
     'inventory_function'    : inventory_perle_cm_modules,
     'check_function'        : check_perle_cm_modules,
-    'service_description'   : 'CM1110 module %s',
+    'service_description'   : 'Chassis slot %s CM1110',
     'snmp_info'             : ('.1.3.6.1.4.1.1966.21.1.1.1.1.4.3', [
                                     "1.1.3",    # PERLE-MCR-MGT-MIB::cm1110Modelname
                                     "3.1.3",    # PERLE-MCR-MGT-MIB::cm1110LedPWR
